--- a/index.html
+++ b/index.html
@@ -340,34 +340,33 @@
     </section>
 </div> 
   
-    
     <!-- Footer -->
-    <footer>
-        <div class="container">
-            <section>
-                <h4>A propos</h4>
-                <ul>
-                    <li><a href="#">Fonctionnement du site</a></li>
-                    <li><a href="#">Conditions générales de vente</a></li>
-                    <li><a href="#">Données et confidentialité</a></li>
-                </ul>
-            </section>
-            <section>
-                <h4>Nos hébergements</h4>
-                <ul>
-                    <li><a href="#">Charte qualité</a></li>
-                    <li><a href="#">Soumettre votre hôtel</a></li>
-                </ul>
-            </section>
-            <section>
-                <h4>Assistance</h4>
-                <ul>
-                    <li><a href="#">Centre d'aide</a></li>
-                    <li><a href="#">Nous contacter</a></li>
-                </ul>
-            </section>
-        </div>
-    </footer>
+<footer>
+    <div class="container">
+        <section>
+            <h4>A propos</h4>
+            <ul>
+                <li><a href="#" title="Fonctionnement du site">Fonctionnement du site</a></li>
+                <li><a href="#" title="Conditions générales de vente">Conditions générales de vente</a></li>
+                <li><a href="#" title="Données et confidentialité">Données et confidentialité</a></li>
+            </ul>
+        </section>
+        <section>
+            <h4>Nos hébergements</h4>
+            <ul>
+                <li><a href="#" title="Charte qualité">Charte qualité</a></li>
+                <li><a href="#"title="Soumettre votre hôtel">Soumettre votre hôtel</a></li>
+            </ul>
+        </section>
+        <section>
+            <h4>Assistance</h4>
+            <ul>
+                <li><a href="#" title="Centre d'aide">Centre d'aide</a></li>
+                <li><a href="#"title="Nous contacter">Nous contacter</a></li>
+            </ul>
+        </section>
+    </div>
+</footer>
 
 </body>
 </html>
